			Memo
			Reminds you about things
			by Thomas Leonard

09-Nov-2001
~~~~~~~~~~~
Make 'Edit' the default button when an alarm appears, not 'Remove'.

25-Sep-2001 (Release 1.0.0)
~~~~~~~~~~~
Bugfix: Messages with <, > or & characters didn't save correctly.

17-Jul-2001
~~~~~~~~~~~
Beep and wait a second before showing an alarm. Otherwise, if an alarm
appears while you're typing you can lose it.

30-May-2001
~~~~~~~~~~~
Switched to using ROX-Lib.

29-May-2001 (Release 0.1.1)
~~~~~~~~~~~
Added AppInfo file.

19-Jan-2001
~~~~~~~~~~~
Main window widgets don't grab the focus (looks better).

13-Jan-2001
~~~~~~~~~~~
Started.