@@ -3,7 +3,7 @@
   <Summary>Shows the time and lets you set memos and alarms</Summary>
   <About>
     <Purpose>Alarm clock</Purpose>
-    <Version>1.0.0 (02-Oct-2001)</Version>
+    <Version>1.1.0 PREVIEW</Version>
     <Author>Thomas Leonard</Author>
     <License>GNU General Public License</License>
     <Homepage>http://rox.sourceforge.net</Homepage>
