@@ -21,7 +21,7 @@ class ShowAll(g.Dialog):
 		frame.add(hbox)
 
 		scroll = g.VScrollbar()
-		hbox.pack_end(scroll)
+		hbox.pack_end(scroll, FALSE, TRUE, 0)
 		
 		self.list = g.TreeView(memo_list)
 		hbox.pack_start(self.list, TRUE, TRUE, 0)
@@ -32,7 +32,7 @@ class ShowAll(g.Dialog):
 		text = g.CellRendererText()
 
 		toggle = g.CellRendererToggle()
-		column = g.TreeViewColumn('H', toggle,
+		column = g.TreeViewColumn('Hide', toggle,
 					  active = memos.HIDDEN)
 		self.list.append_column(column)
 		toggle.connect('toggled',
@@ -55,7 +55,6 @@ class ShowAll(g.Dialog):
 			EditBox(memo).show()
 		
 		self.add_events(g.gdk.BUTTON_PRESS_MASK)
-		self.list.connect('button-press-event', self.button_press)
 		self.list.connect('row-activated', activate)
 
 		#memo_list.watchers.append(self.prime)
@@ -63,17 +62,72 @@ class ShowAll(g.Dialog):
 		#self.connect('destroy', destroyed)
 
 		self.connect('response', self.response)
+
+		self.set_default_response(g.RESPONSE_CANCEL)
+
+		actions = g.HButtonBox()
+		self.vbox.pack_start(actions, FALSE, TRUE, 0)
+		actions.set_layout(g.BUTTONBOX_END)
+		actions.set_border_width(5)
+		actions.set_spacing(4)
+
+		def new(b):
+			from EditBox import EditBox
+			EditBox().show()
+		button = g.Button(stock = g.STOCK_NEW)
+		actions.add(button)
+		button.connect('clicked', new)
+		
+		def delete(b):
+			sel = self.list.get_selection()
+			memos = []
+			for iter in memo_list:
+				if sel.iter_is_selected(iter):
+					m = memo_list.get_memo_by_iter(iter)
+					memos.append(m)
+			if not memos:
+				rox.alert('You need to select some memos first!')
+				return
+			l = len(memos)
+			if l == 1:
+				message = "Really delete memo '%s'?" % memos[0].brief
+			else:
+				message = 'Really delete %d memos?' % l
+
+			box = g.MessageDialog(None, 0, g.MESSAGE_QUESTION,
+						g.BUTTONS_CANCEL, message)
+			box.set_title('Really delete memos?')
+			box.set_position(g.WIN_POS_MOUSE)
+			box.add_button(g.STOCK_DELETE, g.RESPONSE_OK)
+			box.set_default_response(g.RESPONSE_OK)
+			resp = box.run()
+			box.destroy()
+			if resp == g.RESPONSE_OK:
+				for m in memos:
+					memo_list.delete(m, update = 0)
+				memo_list.notify_changed()
+		button = g.Button(stock = g.STOCK_DELETE)
+		actions.add(button)
+		button.connect('clicked', delete)
+		
+		def edit(b):
+			sel = self.list.get_selection()
+			memos = []
+			for iter in memo_list:
+				if sel.iter_is_selected(iter):
+					m = memo_list.get_memo_by_iter(iter)
+					memos.append(m)
+			if len(memos) != 1:
+				rox.alert('You need to select exactly one memo first!')
+				return
+			from EditBox import EditBox
+			EditBox(memos[0]).show()
+		button = rox.ButtonMixed(g.STOCK_PROPERTIES, '_Edit')
+		actions.add(button)
+		button.connect('clicked', edit)
 		
 		self.show_all()
 	
 	def response(self, box, response):
 		if response == g.RESPONSE_CANCEL:
 			self.destroy()
-	
-	def button_press(self, widget, event):
-		if event.type != g.gdk.BUTTON_PRESS:
-			return
-		elif event.button == 2 or event.button == 3:
-			menu.popup(self, event)
-			return 1
-		return 0
